# raindrops_qml_wa

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  raindrops.h
cpp/core/: raindrops_game_engine.cpp  raindrops_game_engine.h  raindrops_qml_application_engine.cpp  raindrops_qml_application_engine.h  t_math_expression.cpp  t_math_expression.h
cpp/qml_types/: raindrops_drop.cpp  raindrops_drop.h
